force-app/main/default/objects/KimbleOne__DiscountScheme__c/KimbleOne__DiscountScheme__c.object-meta.xml
<CustomObject>
    <label>Discount Scheme</label>
    <nameField>
        <label>Discount Scheme Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Discount Schemes</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>