force-app/main/default/objects/KimbleOne__DiscountScheme__c/fields/KimbleOne__DiscountPercentage__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__DiscountPercentage__c</fullName>
    <label>Discount Pct</label>
    <precision>8</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>