force-app/main/default/objects/KimbleOne__DiscountScheme__c/fields/KimbleOne__SchemeModel__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__SchemeModel__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Scheme Model</label>
    <referenceTo>KimbleOne__SchemeModel__c</referenceTo>
    <relationshipLabel>Discount Schemes</relationshipLabel>
    <relationshipName>DiscountSchemes</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>